@@ -1,5 +1,10 @@
 2007-10-05  Al Riddoch  <alriddoch@zepler.org>
 
+	* test/Account_unittest.cpp: Cover the rest of avatarResponse(), and
+	  internalDeactivateCharacter().
+
+2007-10-05  Al Riddoch  <alriddoch@zepler.org>
+
 	* Eris/Account.cpp: Correct an error message.
 
 2007-10-05  Al Riddoch  <alriddoch@zepler.org>
